<resources>
    <string name="app_name">Stillpage</string>
    <string name="app_name_a">Stillpage·A</string>
    <string name="receiving_shared_label">Stillpage·search</string>
    <string name="tip_perm_request_storage">StillPage needs storage access to find and read books. please go "App Settings" to allow "Storage permission".</string>
    <string name="menu_backup">Home</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_import_old">Import StillPage data</string>
    <string name="webdav_cache_backup">Offline cache book backup</string>
    <string name="webdav_cache_backup_s">Export to local and back up to the exports directory under the stillpage folder</string>
    <string name="backup_path">Backup to</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="menu_import_github">Import github data</string>
    <string name="menu_replace_rule">Replacement</string>
    <string name="menu_send">Send</string>
    <string name="dialog_title">Prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_setting">Go to Settings</string>
    <string name="tip_cannot_jump_setting_page">Cannot jump to Settings.</string>
    <string name="manual_input">Manual Input</string>
    <string name="enter_directory_path">Enter directory path</string>
    <string name="invalid_directory">Invalid directory path</string>
    <string name="empty_directory_input">Directory path cannot be empty</string>
    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="draw">Warning</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_select_group">Delete Select Group</string>
    <string name="delete_all">Delete all</string>
    <string name="custom_export_section">Custom export chapter of epub</string>
    <string name="replace">Replace</string>
    <string name="replace_purify">Replacement</string>
    <string name="replace_purify_desc">Configure replacement rules</string>
    <string name="not_available">Not available now</string>
    <string name="enable">Enable</string>
    <string name="replace_purify_search">Search Replacement</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="in_favorites">in Favorites</string>
    <string name="out_favorites">Not in Favorites</string>
    <string name="rss">RSS feeds</string>
    <string name="all">All</string>
    <string name="recent_reading">Recent reading</string>
    <string name="last_read">Last reading</string>
    <string name="update_log">What\'s new</string>
    <string name="bookshelf_empty">The bookshelf is still empty. Search for books or add them from discovery!</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="layout_list">List</string>
    <string name="layout_grid3">Grid-3</string>
    <string name="layout_grid4">Grid-4</string>
    <string name="layout_grid5">Grid-5</string>
    <string name="layout_grid6">Grid-6</string>
    <string name="bookshelf_layout">Layout</string>
    <string name="view">View</string>
    <string name="book_library">Library</string>
    <string name="book_local">Import books</string>
    <string name="book_source">Book sources</string>
    <string name="book_source_manage">Sources management</string>
    <string name="book_source_manage_desc">Create/Import/Edit/Manage Book sources</string>
    <string name="setting">Settings</string>
    <string name="theme_setting">Theme settings</string>
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Some function-related settings</string>
    <string name="about">About</string>
    <string name="donate">Donations</string>
    <string name="exit">Exit</string>
    <string name="exit_no_save">It has not been saved. Do you want to continue editing?</string>
    <string name="content_type_override">Content type override:</string>
    <string name="read_style">Book styles</string>
    <string name="version">Version</string>
    <string name="local">Local</string>
    <string name="search">Search</string>
    <string name="origin_format">Origin: %s</string>
    <string name="read_dur_progress">Origin: %s</string>
    <string name="book_name">Title</string>
    <string name="lasted_show">Latest: %s</string>
    <string name="check_add_bookshelf">Would you like to add %s to your Bookshelf?</string>
    <string name="import_books_count">%s text file(s) in total</string>
    <string name="is_loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="web_service">Web service</string>
    <string name="web_service_desc">Web edit source and read book</string>
    <string name="web_edit_source">Edit book sources on the web</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_t">Offline cache</string>
    <string name="offline_cache_s">cache the selected chapter(s) to Storage</string>
    <string name="change_origin">Change Origin</string>
    <string name="about_description">
        \u3000\u3000 This is an open source reading software newly developed by Kotlin, welcome to join us.
    </string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="author">Author</string>
    <string name="clear_cache">Clear cache</string>
    <string name="img_cover">Cover</string>
    <string name="threads_num_title">Number of concurrent tasks</string>
    <string name="book_intro">Book description</string>
    <string name="check_select_source">Check the selected source</string>
    <string name="to_top">To Top</string>
    <string name="selection_to_top">Selection To Top</string>
    <string name="to_bottom">To Bottom</string>
    <string name="selection_to_bottom">Selection To Bottom</string>
    <string name="ps_default_read">Use Bookshelf as start page</string>
    <string name="pt_default_read">Auto jump to Recent list</string>
    <string name="login">Login</string>
    <string name="share_selected_source">Share selected sources</string>
    <string name="web_port_title">Web port</string>
    <string name="add_group">Add to Groups</string>
    <string name="remove_group">Remove from Groups</string>
    <string name="enable_explore">Enable Discovery</string>
    <string name="disable_explore">Disable Discovery</string>
    <string name="enable_selection">Enable selected</string>
    <string name="disable_selection">Disable selected</string>
    <string name="export_selection">Export selected</string>
    <string name="show_rss">Show RSS feeds</string>
    <string name="add_to_text_context_menu_s">Long tap to display StillPage·Search in the operation menu</string>
    <string name="add_to_text_context_menu_t">Text operation display Search</string>
    <string name="record_log">Record log</string>
    <string name="main_activity">Start page</string>
    <string name="media_button_on_exit_title">Headset buttons are always available</string>
    <string name="media_button_on_exit_summary">Headset buttons are available even exit the app.</string>
    <string name="clear_cache_summary">Clear the cache of the downloaded books and fonts</string>
    <string name="replace_enable_default_t">Enable replace rule by default</string>
    <string name="replace_enable_default_s">For new added books</string>
    <string name="language">Language</string>
    <string name="auto_clear_expired">"Clear expired search histories automatically "</string>
    <string name="auto_clear_expired_summary">Search histories more than one day</string>
    <string name="pre_download">Download in advance</string>
    <string name="pre_download_s">Download %s chapters in advance</string>
    <string name="debug">Debug</string>
    <string name="pref_cronet_summary">use Cronet access network</string>
    <string name="anti_alias">Anti-Aliasing</string>
    <string name="pref_anti_alias_summary">Anti-Aliasing when draw picture</string>
    <string name="direct_link_upload_rule">Straight chain upload rule</string>
    <string name="direct_link_upload_rule_summary">Used to generate direct link url when exporting book source, book list</string>
    <string name="book_tree_uri_t">Book Save Location</string>
    <string name="book_tree_uri_s">Save location for books opened from other apps</string>
    <string name="user_agent">User agent</string>
    <string name="enable_adult_content_title">Adult content</string>
    <string name="enable_adult_content_summary">Show adult content (Explore and search)</string>
    <string name="check_source_config">Check setting</string>
    <string name="record_debug_log">Record debug log</string>
    <string name="bitmap_cache_size_summary">Current cache max size %1$s MB</string>
    <string name="bitmap_cache_size">bitmap cache size</string>
    <string name="image_retain_number_summary">Keep the number of chapters read %s</string>
    <string name="image_retain_number">Number of manga reservations</string>
    <string name="check_selected_interval">Select zones</string>
    <string name="show_add_to_shelf_alert_title">Prompt to add to bookshelf when return</string>
    <string name="show_add_to_shelf_alert_summary">Prompt to add to bookshelf when return from reading books that are not on the bookshelf</string>
    <string name="ignore_audio_focus_title">Ignore audio focus</string>
    <string name="ignore_audio_focus_summary">Allow audio to be played at the same time as other applications</string>
    <string name="source_edit_text_max_line">Maximum number of rows in the source edit box</string>
    <string name="web_service_wake_lock">WebService Wake up Lock</string>
    <string name="web_service_wake_lock_summary">The wake-up lock is enabled when the web service is enabled, and some phones will be killed when the wake-up lock is enabled.</string>
    <string name="groups_or_source">Multi-group / book source</string>
    <string name="clear_webview_data">Clear WebView Data</string>
    <string name="clear_webview_data_summary">Clear all data in WebView</string>
    <string name="set_local_password">Setting the local password</string>
    <string name="set_local_password_summary">The local password is used to encrypt and decrypt the sensitive information of the backup, if you need to synchronize between different devices, the local password should be the same.</string>
    <string name="shrink_database">Shrink database</string>
    <string name="shrink_database_summary">Reduce the size of the database file</string>
    <string name="default_home_page">Default HomePage</string>
    <string name="record_heap_dump_s">Saving a heap dump when the application crashes by OOM</string>
    <string name="record_heap_dump_t">Capture heap dump</string>
    <string name="update_to_variant_title">检查更新查找版本</string>
    <string name="update_to_variant_summary">检查更新时查找其他签名版本</string>
    <string name="enable_haptics">Haptics feedback</string>
    <string name="enable_haptics_summary">Enable subtle vibration on key button taps</string>
    <string name="audio_save_throttle_ms">Audio progress save throttle</string>
    <string name="audio_save_throttle_ms_summary">Minimum interval to save progress: %s ms</string>
    <string name="read_aloud_by_media_button_title">耳机按键启动朗读</string>
    <string name="read_aloud_by_media_button_summary">通过耳机按键来启动朗读</string>
    <string name="show_manga_ui">漫画浏览</string>
</resources>