<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.stillpage.app.lib.prefs.NameListPreference
        android:defaultValue="zh"
        android:key="language"
        android:title="@string/language"
        app:entries="@array/language"
        app:entryValues="@array/language_value" />

    <io.stillpage.app.lib.prefs.PreferenceCategory
        android:title="@string/main_activity"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="auto_refresh"
            android:summary="@string/ps_auto_refresh"
            android:title="@string/pt_auto_refresh"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="defaultToRead"
            android:summary="@string/ps_default_read"
            android:title="@string/pt_default_read"
            app:iconSpaceReserved="false" />

        <PreferenceCategory
            android:title="发现页面设置"
            app:iconSpaceReserved="false">

            <io.stillpage.app.lib.prefs.SwitchPreference
                android:defaultValue="true"
                android:key="showDiscovery"
                android:summary="传统发现页面（书源列表）\n与新版发现页面互斥，只能开启一个"
                android:title="传统发现页面"
                app:iconSpaceReserved="false" />

            <io.stillpage.app.lib.prefs.SwitchPreference
                android:defaultValue="false"
                android:key="useNewExplore"
                android:summary="新版发现页面（网格布局、内容分类）\n与传统发现页面互斥，只能开启一个"
                android:title="新版发现页面"
                app:iconSpaceReserved="false" />

            <io.stillpage.app.lib.prefs.SwitchPreference
                android:defaultValue="false"
                android:key="enableAdultContent"
                android:summary="@string/enable_adult_content_summary"
                android:title="@string/enable_adult_content_title"
                app:iconSpaceReserved="false" />

        </PreferenceCategory>

        <!-- 发现页缓存TTL设置 -->
        <PreferenceCategory
            android:title="发现页缓存TTL"
            app:iconSpaceReserved="false">

            <io.stillpage.app.lib.prefs.Preference
                android:key="exploreTtlAllMin"
                android:title="汇总视图TTL（分钟）" />

            <io.stillpage.app.lib.prefs.Preference
                android:key="exploreTtlDramaMin"
                android:title="短剧TTL（分钟）" />

            <io.stillpage.app.lib.prefs.Preference
                android:key="exploreTtlMusicMin"
                android:title="音乐TTL（分钟）" />

            <io.stillpage.app.lib.prefs.Preference
                android:key="exploreTtlAudioMin"
                android:title="听书TTL（分钟）" />

            <io.stillpage.app.lib.prefs.Preference
                android:key="exploreTtlImageMin"
                android:title="漫画/图片TTL（分钟）" />

            <io.stillpage.app.lib.prefs.Preference
                android:key="exploreTtlTextMin"
                android:title="文本TTL（分钟）" />

            <io.stillpage.app.lib.prefs.Preference
                android:key="exploreTtlFileMin"
                android:title="文件TTL（分钟）" />

            <io.stillpage.app.lib.prefs.Preference
                android:key="exploreSourceTtl"
                android:title="书源TTL映射"
                android:summary="url=分钟，多项以逗号或换行分隔" />

        </PreferenceCategory>

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="showRss"
            android:title="@string/show_rss"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.NameListPreference
            android:defaultValue="bookshelf"
            android:key="defaultHomePage"
            android:title="@string/default_home_page"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:entries="@array/default_home_page"
            app:entryValues="@array/default_home_page_value" />

    </io.stillpage.app.lib.prefs.PreferenceCategory>

    <io.stillpage.app.lib.prefs.PreferenceCategory
        android:title="@string/other_setting"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.stillpage.app.lib.prefs.Preference
            android:key="localPassword"
            android:summary="@string/set_local_password_summary"
            android:title="@string/set_local_password" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="userAgent"
            android:title="@string/user_agent" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="webServiceWakeLock"
            android:summary="@string/web_service_wake_lock_summary"
            android:title="@string/web_service_wake_lock" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="defaultBookTreeUri"
            android:summary="@string/book_tree_uri_s"
            android:title="@string/book_tree_uri_t" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="sourceEditMaxLine"
            android:title="@string/source_edit_text_max_line" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="checkSource"
            android:title="@string/check_source_config" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="uploadRule"
            android:summary="@string/direct_link_upload_rule_summary"
            android:title="@string/direct_link_upload_rule" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="Cronet"
            android:summary="@string/pref_cronet_summary"
            android:title="Cronet" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="antiAlias"
            android:summary="@string/pref_anti_alias_summary"
            android:title="@string/anti_alias" />

        <!-- 触觉反馈开关 -->
        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="enableHaptics"
            android:summary="@string/enable_haptics_summary"
            android:title="@string/enable_haptics"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="bitmapCacheSize"
            android:summary="@string/bitmap_cache_size_summary"
            android:title="@string/bitmap_cache_size" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="imageRetainNum"
            android:summary="@string/image_retain_number_summary"
            android:title="@string/image_retain_number" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="preDownloadNum"
            android:summary="@string/pre_download_s"
            android:title="@string/pre_download" />

        <!-- 进度保存节流窗口（毫秒）配置入口 -->
        <io.stillpage.app.lib.prefs.Preference
            android:key="audioSaveThrottleMs"
            android:summary="@string/audio_save_throttle_ms_summary"
            android:title="@string/audio_save_throttle_ms"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="replaceEnableDefault"
            android:summary="@string/replace_enable_default_s"
            android:title="@string/replace_enable_default_t"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="mediaButtonOnExit"
            android:summary="@string/media_button_on_exit_summary"
            android:title="@string/media_button_on_exit_title"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="readAloudByMediaButton"
            android:summary="@string/read_aloud_by_media_button_summary"
            android:title="@string/read_aloud_by_media_button_title"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="ignoreAudioFocus"
            android:summary="@string/ignore_audio_focus_summary"
            android:title="@string/ignore_audio_focus_title" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="autoClearExpired"
            android:summary="@string/auto_clear_expired_summary"
            android:title="@string/auto_clear_expired" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="showAddToShelfAlert"
            android:summary="@string/show_add_to_shelf_alert_summary"
            android:title="@string/show_add_to_shelf_alert_title" />

        <io.stillpage.app.lib.prefs.NameListPreference
            android:defaultValue="default_version"
            android:key="updateToVariant"
            android:summary="@string/update_to_variant_summary"
            android:title="@string/update_to_variant_title"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:entries="@array/default_app_variant"
            app:entryValues="@array/default_app_variant_value" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="showMangaUi"
            android:title="@string/show_manga_ui"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="webPort"
            android:title="@string/web_port_title"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="cleanCache"
            android:summary="@string/clear_cache_summary"
            android:title="@string/clear_cache"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="clearWebViewData"
            android:summary="@string/clear_webview_data_summary"
            android:title="@string/clear_webview_data"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="shrinkDatabase"
            android:summary="@string/shrink_database_summary"
            android:title="@string/shrink_database"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.Preference
            android:key="threadCount"
            android:title="@string/threads_num_title"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="process_text"
            android:summary="@string/add_to_text_context_menu_s"
            android:title="@string/add_to_text_context_menu_t"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="recordLog"
            android:summary="@string/record_debug_log"
            android:title="@string/record_log"
            app:iconSpaceReserved="false" />

        <io.stillpage.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="recordHeapDump"
            android:summary="@string/record_heap_dump_s"
            android:title="@string/record_heap_dump_t"
            app:iconSpaceReserved="false" />

    </io.stillpage.app.lib.prefs.PreferenceCategory>


</androidx.preference.PreferenceScreen>