<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_top"
        android:title="@string/to_top" />

    <item
        android:id="@+id/menu_bottom"
        android:title="@string/to_bottom" />

    <item
        android:id="@+id/menu_login"
        android:title="@string/login" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/search" />

    <item
        android:id="@+id/menu_debug_source"
        android:title="@string/debug" />

    <item
        android:id="@+id/menu_del"
        android:title="@string/delete" />

    <item
        android:id="@+id/menu_enable_explore"
        android:title="@string/enable_explore" />

    <item
        android:id="@+id/menu_move_to_group"
        android:title="移动到分组">
        <menu>
            <item
                android:id="@+id/menu_move_to_novel"
                android:title="小说" />
            <item
                android:id="@+id/menu_move_to_music"
                android:title="音乐" />
            <item
                android:id="@+id/menu_move_to_drama"
                android:title="短剧" />
            <item
                android:id="@+id/menu_move_to_manga"
                android:title="漫画" />
        </menu>
    </item>

</menu>