<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_search_scope"
        android:title="@string/groups_or_source"
        android:icon="@drawable/ic_groups"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_source_manage"
        android:title="@string/book_source_manage"
        android:icon="@drawable/ic_cfg_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_cache"
        android:title="@string/clear_cache"
        android:icon="@drawable/ic_clear_all"
        app:showAsAction="never" />

</menu>
