<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <io.stillpage.app.ui.widget.image.CoverImageView
        android:id="@+id/iv_cover"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/img_cover"
        android:scaleType="centerCrop"
        android:scrollbars="none"
        android:src="@drawable/image_cover_default"
        android:transitionName="img_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <!-- 内容类型标签（微标） -->
    <TextView
        android:id="@+id/tv_content_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/shape_badge_bg"
        android:paddingLeft="6dp"
        android:paddingTop="2dp"
        android:paddingRight="6dp"
        android:paddingBottom="2dp"
        android:scrollbars="none"
        android:text="书籍"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="@id/iv_cover"
        app:layout_constraintTop_toTopOf="@id/iv_cover"
        tools:ignore="HardcodedText" />

    <io.stillpage.app.ui.widget.image.CircleImageView
        android:id="@+id/iv_in_bookshelf"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_margin="8dp"
        android:scaleType="centerCrop"
        android:scrollbars="none"
        android:src="@color/md_green_600"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@id/iv_cover"
        app:layout_constraintTop_toTopOf="@id/tv_name" />

    <io.stillpage.app.ui.widget.text.BadgeView
        android:id="@+id/bv_originCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:scrollbars="none"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:scrollbars="none"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/bv_originCount"
        app:layout_constraintStart_toEndOf="@+id/iv_in_bookshelf"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="@id/iv_cover"
        app:layout_constraintLeft_toRightOf="@+id/iv_cover"
        app:layout_constraintRight_toRightOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name">

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:scrollbars="none"
            android:text="@string/author"
            android:textColor="@color/primaryText"
            android:textSize="12sp" />

        <io.stillpage.app.ui.widget.LabelsBar
            android:id="@+id/ll_kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="none" />

        <TextView
            android:id="@+id/tv_lasted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:scrollbars="none"
            android:text="@string/last_read"
            android:textColor="@color/primaryText"
            android:textSize="12sp" />

        <io.stillpage.app.ui.widget.text.MultilineTextView
            android:id="@+id/tv_introduce"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:scrollbars="none"
            android:text="@string/book_intro"
            android:textColor="@color/primaryText"
            android:textSize="12sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>